--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,7 +17,8 @@
     "react-compare-image": "^3.5.4",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
